k8s/base/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: omnia-db
  labels:
    app: omnia-db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: omnia-db
  template:
    metadata:
      labels:
        app: omnia-db
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: db
          image: mcr.microsoft.com/mssql/server:2019-CU28-ubuntu-20.04
          ports:
            - containerPort: 1433
          securityContext:
            runAsUser: 10001
            runAsNonRoot: true
          resources:
            requests:
              memory: "1024Mi"
              cpu: "500m"
            limits:
              memory: "1536Mi"
              cpu: "1000m"
          volumeMounts:
            - name: db-data
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
