k8s/base/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnia-front
  labels:
    app: omnia-front
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: omnia-front
  template:
    metadata:
      labels:
        app: omnia-front
    spec:
      serviceAccountName: github-deployer
      containers:
        - name: front
          image: ghcr.io/rmurier/omnia-front:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
