k8s/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omnia
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api
          port: 8080
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: front
          port: 80
